--- a/react-portfolio/src/components/Contact.css
+++ b/react-portfolio/src/components/Contact.css
@@ -12,10 +12,9 @@ label{
     font-style: normal;  
 }
 
-input{
-   
+p{
+    text-align: center;
 }
-
 .contact-form{
     border: 5px solid rgb(255, 255, 255);
     border-radius: 3%;
@@ -30,8 +29,9 @@ input{
 }
 
 .icons{
-    display: inline;
-    
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 8%;
 }
 
 .github-image{
