--- a/react-portfolio/src/components/Home.css
+++ b/react-portfolio/src/components/Home.css
@@ -17,6 +17,15 @@ h1{
     margin-bottom: 0;
 }
 
+.home-icons{
+    display:flex;
+    align-items: center;
+    /* flex-direction: column; */
+    margin-top: 8%;
+    margin-left:5%;
+   justify-content: center;
+    
+}
 .myPic{
    width: 350px;
    height: 100%;
@@ -27,6 +36,13 @@ h1{
    box-shadow: 10px 10px 15px 10px #8d8d8d97;
 }
 
+.about-me{
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 21px;
+    margin-left:5%;
+    margin-right:5%;
+}
 .home-header{
     font-size: 70px;
     color: white;
@@ -45,7 +61,7 @@ h1{
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;  
-    font-size: 21px;
+    font-size: 18px;
 }
 
 
