--- a/react-portfolio/src/components/Projects.css
+++ b/react-portfolio/src/components/Projects.css
@@ -6,7 +6,7 @@
 }
 
 .card-design{
-    border: 3px solid black !important;
+    border: 3px solid rgb(130, 130, 130) !important;
 }
 
 .expanded-text{
